# mjqm-simulator

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
Inputs/: killsmart_ex_pareto.toml  oneOrAll.toml
docs/: README.md  index.html  report.md  run.md  settings.schema.json
libs/policies/: CMakeLists.txt
libs/policies/include/mjqm-policies/: LCFS.h  policies.h
libs/policies/src/mjqm-policies/: BackFilling.cpp  BackFillingImperfect.cpp  LCFS.cpp
libs/simulator/include/mjqm-settings/: loader.hpp  toml_policies_loaders.h
libs/simulator/include/mjqm-simulator/: experiment_stats.h  simulator.h
libs/simulator/src/mjqm-settings/: toml_loader.cpp  toml_policies_loaders.cpp  toml_utils.cpp
scripts/: load_experiment_data.py  plot_experiment.py  plotly_app.py
