[project]
name = "mjqm-simulator"
version = "0.1.0"
description = "Simulator for Multiserver Job Queuing Model (MJQM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "dash-bootstrap-components>=2.0.3",
    "dash-daq>=0.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "spyder>=6.0.5",
]

[tool.uv]
package = false
exclude-newer = "1 week"

