add_library(policies
        src/mjqm-policies/AdaptiveMSF.cpp
        src/mjqm-policies/BackFilling.cpp
        src/mjqm-policies/BackFillingImperfect.cpp
        src/mjqm-policies/BalancedSplitting.cpp
        src/mjqm-policies/DualKill.cpp
        src/mjqm-policies/FirstFit.cpp
        src/mjqm-policies/KillSmart.cpp
        src/mjqm-policies/LCFS.cpp
        src/mjqm-policies/MostServerFirst.cpp
        src/mjqm-policies/QuickSwap.cpp
        src/mjqm-policies/ServerFilling.cpp
        src/mjqm-policies/ServerFillingMem.cpp
        src/mjqm-policies/Smash.cpp
        src/mjqm-policies/StaticMSF.cpp
)
